--- a/application-service/src/deployment.yaml
+++ b/application-service/src/deployment.yaml
@@ -1,34 +1,38 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: order-service
+  name: application-service
   labels:
-    app: order-service
+    app: application-service
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: order-service
+      app: application-service
   template:
     metadata:
       labels:
-        app: order-service
+        app: application-service
     spec:
       containers:
-      - name: order-service
-        image: us-central1-docker.pkg.dev/dash-gcp-services/microservices/order-service:latest
+      - name: application-service
+        image: us-central1-docker.pkg.dev/dash-gcp-services/microservices/application-service:latest
         ports:
         - containerPort: 3001
+        env:
+        - name: PORT
+          value: "3001"
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: order-service
+  name: application-service
 spec:
   selector:
-    app: order-service
+    app: application-service
   ports:
     - port: 80
       targetPort: 3001
   type: ClusterIP
+
 
