--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -25,9 +25,14 @@ jobs:
           service_account_key: ${{ env.GCP_SA_KEY }}
           export_default_credentials: true
 
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.9.5   # (or whichever version you use)
+
       - name: Configure Docker for Artifact Registry
         run: gcloud auth configure-docker "${{ env.REGION }}-docker.pkg.dev"
- 
+
       - name: Terraform Init & Apply
         working-directory: infra
         run: |
@@ -48,3 +53,4 @@ jobs:
 
       - name: Deploy Application Service
         run: kubectl apply -f application-service/deployment.yaml
+
